# pga_inr

./: .gitignore  README.md  brief.md  pyproject.toml  requirements.txt
examples/: 02_weight_space_manipulation.py  09_primitive_shapes.py  10_fbx_character.py
input/3d_meshes/: x_bot_t_pose.fbx  x_bot_t_pose.gltf
input/animations/: x_bot_breakdance_1990.fbx  x_bot_breakdance_1990.gltf  x_bot_walking.fbx  x_bot_walking.gltf
pga_inr/: __init__.py
pga_inr/core/: __init__.py  base.py  constants.py  types.py
pga_inr/data/: __init__.py  datasets.py  fbx_loader.py  fm_loader.py  mesh_utils.py  motion_dataset.py  rigged_dataset.py  sampling.py
pga_inr/diffusion/: __init__.py  gaussian_diffusion.py  motion_diffusion.py  noise_schedule.py
pga_inr/losses/: __init__.py  geometric.py  motion_losses.py  regularization.py
pga_inr/models/: __init__.py  encoders.py  generative.py  inr.py  phase_coherent.py
pga_inr/models/layers/: __init__.py  hyper.py  motor.py  sine.py
pga_inr/models/motion/: __init__.py  conditional_pga_inr.py  encoders.py  style_embedding.py
pga_inr/ops/: __init__.py  csg.py
pga_inr/pga/: __init__.py  algebra.py  motors.py  primitives.py  transforms.py
pga_inr/rendering/: __init__.py  diff_mesh.py  rays.py  shading.py  sphere_tracing.py
pga_inr/slam/: __init__.py  backend.py  config.py  frontend.py  ground_truth.py  keyframe.py  losses.py  mapper.py  pose_graph.py  tracker.py  types.py  visualization.py
pga_inr/spacetime/: __init__.py  interpolation.py  kinematic_chain.py  sdf_flow.py  spacetime_inr.py  temporal_motor.py
pga_inr/training/: __init__.py  curriculum.py  schedulers.py  trainer.py
pga_inr/utils/: __init__.py  config.py  motion_visualization.py  quaternion.py  rotation.py  visualization.py
scripts/: verify_cayley.py
tests/: __init__.py  conftest.py  test_algebra.py  test_encoders.py  test_fbx_loader.py  test_inr.py  test_losses.py  test_motors.py  test_primitives.py  test_quaternion.py  test_rendering.py  test_sampling.py  test_slam.py  test_spacetime.py  test_trainer.py
